...
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/icon_date"
                    app:riv_corner_radius="20dp"
                    app:riv_oval="true" />

                <TextView
                    android:id="@+id/mBtnDate"
                    android:layout_width="220dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:background="@color/bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
...
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/sort_icon_kao" />

                <TextView
                    android:id="@+id/mBtnFromTime"
                    android:layout_width="220dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:background="@color/bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
...
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/layout_reserve"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:gravity="end|center_vertical"
                    android:text="@string/reserve"
                    android:textColor="@color/white"
                    android:textSize="20sp"
...
