<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021.   # COMP 4521 #
  ~ # SHEN, Ye #	 20583137	yshenat@connect.ust.hk
  ~ # ZHOU, Ji #	 20583761	jzhoubl@connect.ust.hk
  ~ # WU, Sik Chit #	 20564571	scwuaa@connect.ust.hk
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp"
    tools:context=".ui.home.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRvHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>